parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start_state
Rule 1     start_state -> INT ID OPBRAC CLOSEBRAC stmts
Rule 2     iter_stmt -> X Y Z
Rule 3     X -> IF OPBRAC cond_stmt CLOSEBRAC
Rule 4     Y -> stmts
Rule 5     Z -> ELSE stmts stmts
Rule 6     Z -> <empty>
Rule 7     stmts -> OPENFLR stmts CLOSEFLR
Rule 8     stmts -> iter_stmt
Rule 9     stmts -> expr_stmt STATETER stmts
Rule 10    stmts -> printing STATETER stmts
Rule 11    stmts -> assignment STATETER stmts
Rule 12    stmts -> decfloat STATETER stmts
Rule 13    stmts -> declareint STATETER stmts
Rule 14    stmts -> math stmts
Rule 15    stmts -> newone stmts
Rule 16    stmts -> <empty>
Rule 17    newone -> ID ASSIGN ID PLUS NUMBER STATETER stmts
Rule 18    newone -> ID ASSIGN ID PLUS ID STATETER stmts
Rule 19    newone -> ID ASSIGN ID MINUS NUMBER STATETER stmts
Rule 20    newone -> ID ASSIGN ID MINUS ID STATETER stmts
Rule 21    expr_stmt -> assignment_int
Rule 22    expr_stmt -> declare
Rule 23    assignment_int -> INT ID ASSIGN NUMBER followint
Rule 24    assignment_int -> INT ID followint
Rule 25    followint -> COMMA ID ASSIGN NUMBER followint
Rule 26    followint -> COMMA ID followint
Rule 27    followint -> <empty>
Rule 28    assignment -> FLOAT ID ASSIGN NUMBER followfloat
Rule 29    assignment -> FLOAT ID followfloat
Rule 30    followfloat -> COMMA ID ASSIGN NUMBER followfloat
Rule 31    followfloat -> COMMA ID followfloat
Rule 32    followfloat -> <empty>
Rule 33    assignment -> CHAR ID ASSIGN NUMBER follow
Rule 34    declare -> ID ASSIGN NUMBER followint
Rule 35    declareint -> ID ASSIGN NUMBER
Rule 36    decfloat -> ID ASSIGN NUMBER
Rule 37    cond_stmt -> ID RELOP ID
Rule 38    cond_stmt -> ID RELOP NUMBER
Rule 39    cond_stmt -> NUMBER RELOP ID
Rule 40    cond_stmt -> NUMBER RELOP NUMBER
Rule 41    cond_stmt -> cond_stmt LOGOP cond_stmt
Rule 42    cond_stmt -> <empty>
Rule 43    math -> ID PLUS ASSIGN NUMBER STATETER
Rule 44    math -> ID PLUS ASSIGN ID STATETER
Rule 45    math -> ID MINUS ASSIGN NUMBER STATETER
Rule 46    math -> ID MINUS ASSIGN ID STATETER
Rule 47    math -> ID AOP ASSIGN NUMBER STATETER
Rule 48    math -> ID AOP ASSIGN ID STATETER
Rule 49    math -> PLUS PLUS ID STATETER
Rule 50    math -> ID PLUS PLUS STATETER
Rule 51    math -> MINUS MINUS ID STATETER
Rule 52    math -> ID MINUS MINUS STATETER
Rule 53    printing -> PRINT
Rule 54    printing -> PRINTF OPBRAC STRLIT follow CLOSEBRAC
Rule 55    follow -> COMMA ID follow
Rule 56    follow -> <empty>

Terminals, with rules where they appear

AOP                  : 47 48
ASSIGN               : 17 18 19 20 23 25 28 30 33 34 35 36 43 44 45 46 47 48
CHAR                 : 33
CLOSEBRAC            : 1 3 54
CLOSEFLR             : 7
COMMA                : 25 26 30 31 55
ELSE                 : 5
FLOAT                : 28 29
ID                   : 1 17 17 18 18 18 19 19 20 20 20 23 24 25 26 28 29 30 31 33 34 35 36 37 37 38 39 43 44 44 45 46 46 47 48 48 49 50 51 52 55
IF                   : 3
INT                  : 1 23 24
LOGOP                : 41
MINUS                : 19 20 45 46 51 51 52 52
NUMBER               : 17 19 23 25 28 30 33 34 35 36 38 39 40 40 43 45 47
OPBRAC               : 1 3 54
OPENFLR              : 7
PLUS                 : 17 18 43 44 49 49 50 50
PRINT                : 53
PRINTF               : 54
RELOP                : 37 38 39 40
STATETER             : 9 10 11 12 13 17 18 19 20 43 44 45 46 47 48 49 50 51 52
STRLIT               : 54
error                : 

Nonterminals, with rules where they appear

X                    : 2
Y                    : 2
Z                    : 2
assignment           : 11
assignment_int       : 21
cond_stmt            : 3 41 41
decfloat             : 12
declare              : 22
declareint           : 13
expr_stmt            : 9
follow               : 33 54 55
followfloat          : 28 29 30 31
followint            : 23 24 25 26 34
iter_stmt            : 8
math                 : 14
newone               : 15
printing             : 10
start_state          : 0
stmts                : 1 4 5 5 7 9 10 11 12 13 14 15 17 18 19 20

Parsing method: LALR

state 0

    (0) S' -> . start_state
    (1) start_state -> . INT ID OPBRAC CLOSEBRAC stmts

    INT             shift and go to state 2

    start_state                    shift and go to state 1

state 1

    (0) S' -> start_state .



state 2

    (1) start_state -> INT . ID OPBRAC CLOSEBRAC stmts

    ID              shift and go to state 3


state 3

    (1) start_state -> INT ID . OPBRAC CLOSEBRAC stmts

    OPBRAC          shift and go to state 4


state 4

    (1) start_state -> INT ID OPBRAC . CLOSEBRAC stmts

    CLOSEBRAC       shift and go to state 5


state 5

    (1) start_state -> INT ID OPBRAC CLOSEBRAC . stmts
    (7) stmts -> . OPENFLR stmts CLOSEFLR
    (8) stmts -> . iter_stmt
    (9) stmts -> . expr_stmt STATETER stmts
    (10) stmts -> . printing STATETER stmts
    (11) stmts -> . assignment STATETER stmts
    (12) stmts -> . decfloat STATETER stmts
    (13) stmts -> . declareint STATETER stmts
    (14) stmts -> . math stmts
    (15) stmts -> . newone stmts
    (16) stmts -> .
    (2) iter_stmt -> . X Y Z
    (21) expr_stmt -> . assignment_int
    (22) expr_stmt -> . declare
    (53) printing -> . PRINT
    (54) printing -> . PRINTF OPBRAC STRLIT follow CLOSEBRAC
    (28) assignment -> . FLOAT ID ASSIGN NUMBER followfloat
    (29) assignment -> . FLOAT ID followfloat
    (33) assignment -> . CHAR ID ASSIGN NUMBER follow
    (36) decfloat -> . ID ASSIGN NUMBER
    (35) declareint -> . ID ASSIGN NUMBER
    (43) math -> . ID PLUS ASSIGN NUMBER STATETER
    (44) math -> . ID PLUS ASSIGN ID STATETER
    (45) math -> . ID MINUS ASSIGN NUMBER STATETER
    (46) math -> . ID MINUS ASSIGN ID STATETER
    (47) math -> . ID AOP ASSIGN NUMBER STATETER
    (48) math -> . ID AOP ASSIGN ID STATETER
    (49) math -> . PLUS PLUS ID STATETER
    (50) math -> . ID PLUS PLUS STATETER
    (51) math -> . MINUS MINUS ID STATETER
    (52) math -> . ID MINUS MINUS STATETER
    (17) newone -> . ID ASSIGN ID PLUS NUMBER STATETER stmts
    (18) newone -> . ID ASSIGN ID PLUS ID STATETER stmts
    (19) newone -> . ID ASSIGN ID MINUS NUMBER STATETER stmts
    (20) newone -> . ID ASSIGN ID MINUS ID STATETER stmts
    (3) X -> . IF OPBRAC cond_stmt CLOSEBRAC
    (23) assignment_int -> . INT ID ASSIGN NUMBER followint
    (24) assignment_int -> . INT ID followint
    (34) declare -> . ID ASSIGN NUMBER followint

    OPENFLR         shift and go to state 21
    $end            reduce using rule 16 (stmts -> .)
    PRINT           shift and go to state 8
    PRINTF          shift and go to state 15
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 7
    ID              shift and go to state 17
    PLUS            shift and go to state 12
    MINUS           shift and go to state 9
    IF              shift and go to state 19
    INT             shift and go to state 22

    newone                         shift and go to state 20
    stmts                          shift and go to state 11
    assignment                     shift and go to state 14
    declareint                     shift and go to state 6
    printing                       shift and go to state 24
    iter_stmt                      shift and go to state 18
    assignment_int                 shift and go to state 26
    X                              shift and go to state 16
    expr_stmt                      shift and go to state 10
    declare                        shift and go to state 27
    decfloat                       shift and go to state 13
    math                           shift and go to state 25

state 6

    (13) stmts -> declareint . STATETER stmts

    STATETER        shift and go to state 28


state 7

    (33) assignment -> CHAR . ID ASSIGN NUMBER follow

    ID              shift and go to state 29


state 8

    (53) printing -> PRINT .

    STATETER        reduce using rule 53 (printing -> PRINT .)


state 9

    (51) math -> MINUS . MINUS ID STATETER

    MINUS           shift and go to state 30


state 10

    (9) stmts -> expr_stmt . STATETER stmts

    STATETER        shift and go to state 31


state 11

    (1) start_state -> INT ID OPBRAC CLOSEBRAC stmts .

    $end            reduce using rule 1 (start_state -> INT ID OPBRAC CLOSEBRAC stmts .)


state 12

    (49) math -> PLUS . PLUS ID STATETER

    PLUS            shift and go to state 32


state 13

    (12) stmts -> decfloat . STATETER stmts

    STATETER        shift and go to state 33


state 14

    (11) stmts -> assignment . STATETER stmts

    STATETER        shift and go to state 34


state 15

    (54) printing -> PRINTF . OPBRAC STRLIT follow CLOSEBRAC

    OPBRAC          shift and go to state 35


state 16

    (2) iter_stmt -> X . Y Z
    (4) Y -> . stmts
    (7) stmts -> . OPENFLR stmts CLOSEFLR
    (8) stmts -> . iter_stmt
    (9) stmts -> . expr_stmt STATETER stmts
    (10) stmts -> . printing STATETER stmts
    (11) stmts -> . assignment STATETER stmts
    (12) stmts -> . decfloat STATETER stmts
    (13) stmts -> . declareint STATETER stmts
    (14) stmts -> . math stmts
    (15) stmts -> . newone stmts
    (16) stmts -> .
    (2) iter_stmt -> . X Y Z
    (21) expr_stmt -> . assignment_int
    (22) expr_stmt -> . declare
    (53) printing -> . PRINT
    (54) printing -> . PRINTF OPBRAC STRLIT follow CLOSEBRAC
    (28) assignment -> . FLOAT ID ASSIGN NUMBER followfloat
    (29) assignment -> . FLOAT ID followfloat
    (33) assignment -> . CHAR ID ASSIGN NUMBER follow
    (36) decfloat -> . ID ASSIGN NUMBER
    (35) declareint -> . ID ASSIGN NUMBER
    (43) math -> . ID PLUS ASSIGN NUMBER STATETER
    (44) math -> . ID PLUS ASSIGN ID STATETER
    (45) math -> . ID MINUS ASSIGN NUMBER STATETER
    (46) math -> . ID MINUS ASSIGN ID STATETER
    (47) math -> . ID AOP ASSIGN NUMBER STATETER
    (48) math -> . ID AOP ASSIGN ID STATETER
    (49) math -> . PLUS PLUS ID STATETER
    (50) math -> . ID PLUS PLUS STATETER
    (51) math -> . MINUS MINUS ID STATETER
    (52) math -> . ID MINUS MINUS STATETER
    (17) newone -> . ID ASSIGN ID PLUS NUMBER STATETER stmts
    (18) newone -> . ID ASSIGN ID PLUS ID STATETER stmts
    (19) newone -> . ID ASSIGN ID MINUS NUMBER STATETER stmts
    (20) newone -> . ID ASSIGN ID MINUS ID STATETER stmts
    (3) X -> . IF OPBRAC cond_stmt CLOSEBRAC
    (23) assignment_int -> . INT ID ASSIGN NUMBER followint
    (24) assignment_int -> . INT ID followint
    (34) declare -> . ID ASSIGN NUMBER followint

  ! shift/reduce conflict for OPENFLR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for PRINTF resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for INT resolved as shift
    OPENFLR         shift and go to state 21
    ELSE            reduce using rule 16 (stmts -> .)
    $end            reduce using rule 16 (stmts -> .)
    CLOSEFLR        reduce using rule 16 (stmts -> .)
    PRINT           shift and go to state 8
    PRINTF          shift and go to state 15
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 7
    ID              shift and go to state 17
    PLUS            shift and go to state 12
    MINUS           shift and go to state 9
    IF              shift and go to state 19
    INT             shift and go to state 22

  ! OPENFLR         [ reduce using rule 16 (stmts -> .) ]
  ! PRINT           [ reduce using rule 16 (stmts -> .) ]
  ! PRINTF          [ reduce using rule 16 (stmts -> .) ]
  ! FLOAT           [ reduce using rule 16 (stmts -> .) ]
  ! CHAR            [ reduce using rule 16 (stmts -> .) ]
  ! ID              [ reduce using rule 16 (stmts -> .) ]
  ! PLUS            [ reduce using rule 16 (stmts -> .) ]
  ! MINUS           [ reduce using rule 16 (stmts -> .) ]
  ! IF              [ reduce using rule 16 (stmts -> .) ]
  ! INT             [ reduce using rule 16 (stmts -> .) ]

    newone                         shift and go to state 20
    stmts                          shift and go to state 36
    assignment                     shift and go to state 14
    declareint                     shift and go to state 6
    printing                       shift and go to state 24
    decfloat                       shift and go to state 13
    assignment_int                 shift and go to state 26
    Y                              shift and go to state 37
    X                              shift and go to state 16
    expr_stmt                      shift and go to state 10
    declare                        shift and go to state 27
    iter_stmt                      shift and go to state 18
    math                           shift and go to state 25

state 17

    (36) decfloat -> ID . ASSIGN NUMBER
    (35) declareint -> ID . ASSIGN NUMBER
    (43) math -> ID . PLUS ASSIGN NUMBER STATETER
    (44) math -> ID . PLUS ASSIGN ID STATETER
    (45) math -> ID . MINUS ASSIGN NUMBER STATETER
    (46) math -> ID . MINUS ASSIGN ID STATETER
    (47) math -> ID . AOP ASSIGN NUMBER STATETER
    (48) math -> ID . AOP ASSIGN ID STATETER
    (50) math -> ID . PLUS PLUS STATETER
    (52) math -> ID . MINUS MINUS STATETER
    (17) newone -> ID . ASSIGN ID PLUS NUMBER STATETER stmts
    (18) newone -> ID . ASSIGN ID PLUS ID STATETER stmts
    (19) newone -> ID . ASSIGN ID MINUS NUMBER STATETER stmts
    (20) newone -> ID . ASSIGN ID MINUS ID STATETER stmts
    (34) declare -> ID . ASSIGN NUMBER followint

    ASSIGN          shift and go to state 38
    PLUS            shift and go to state 40
    MINUS           shift and go to state 39
    AOP             shift and go to state 41


state 18

    (8) stmts -> iter_stmt .

    ELSE            reduce using rule 8 (stmts -> iter_stmt .)
    $end            reduce using rule 8 (stmts -> iter_stmt .)
    CLOSEFLR        reduce using rule 8 (stmts -> iter_stmt .)
    OPENFLR         reduce using rule 8 (stmts -> iter_stmt .)
    PRINT           reduce using rule 8 (stmts -> iter_stmt .)
    PRINTF          reduce using rule 8 (stmts -> iter_stmt .)
    FLOAT           reduce using rule 8 (stmts -> iter_stmt .)
    CHAR            reduce using rule 8 (stmts -> iter_stmt .)
    ID              reduce using rule 8 (stmts -> iter_stmt .)
    PLUS            reduce using rule 8 (stmts -> iter_stmt .)
    MINUS           reduce using rule 8 (stmts -> iter_stmt .)
    IF              reduce using rule 8 (stmts -> iter_stmt .)
    INT             reduce using rule 8 (stmts -> iter_stmt .)


state 19

    (3) X -> IF . OPBRAC cond_stmt CLOSEBRAC

    OPBRAC          shift and go to state 42


state 20

    (15) stmts -> newone . stmts
    (7) stmts -> . OPENFLR stmts CLOSEFLR
    (8) stmts -> . iter_stmt
    (9) stmts -> . expr_stmt STATETER stmts
    (10) stmts -> . printing STATETER stmts
    (11) stmts -> . assignment STATETER stmts
    (12) stmts -> . decfloat STATETER stmts
    (13) stmts -> . declareint STATETER stmts
    (14) stmts -> . math stmts
    (15) stmts -> . newone stmts
    (16) stmts -> .
    (2) iter_stmt -> . X Y Z
    (21) expr_stmt -> . assignment_int
    (22) expr_stmt -> . declare
    (53) printing -> . PRINT
    (54) printing -> . PRINTF OPBRAC STRLIT follow CLOSEBRAC
    (28) assignment -> . FLOAT ID ASSIGN NUMBER followfloat
    (29) assignment -> . FLOAT ID followfloat
    (33) assignment -> . CHAR ID ASSIGN NUMBER follow
    (36) decfloat -> . ID ASSIGN NUMBER
    (35) declareint -> . ID ASSIGN NUMBER
    (43) math -> . ID PLUS ASSIGN NUMBER STATETER
    (44) math -> . ID PLUS ASSIGN ID STATETER
    (45) math -> . ID MINUS ASSIGN NUMBER STATETER
    (46) math -> . ID MINUS ASSIGN ID STATETER
    (47) math -> . ID AOP ASSIGN NUMBER STATETER
    (48) math -> . ID AOP ASSIGN ID STATETER
    (49) math -> . PLUS PLUS ID STATETER
    (50) math -> . ID PLUS PLUS STATETER
    (51) math -> . MINUS MINUS ID STATETER
    (52) math -> . ID MINUS MINUS STATETER
    (17) newone -> . ID ASSIGN ID PLUS NUMBER STATETER stmts
    (18) newone -> . ID ASSIGN ID PLUS ID STATETER stmts
    (19) newone -> . ID ASSIGN ID MINUS NUMBER STATETER stmts
    (20) newone -> . ID ASSIGN ID MINUS ID STATETER stmts
    (3) X -> . IF OPBRAC cond_stmt CLOSEBRAC
    (23) assignment_int -> . INT ID ASSIGN NUMBER followint
    (24) assignment_int -> . INT ID followint
    (34) declare -> . ID ASSIGN NUMBER followint

  ! shift/reduce conflict for OPENFLR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for PRINTF resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for INT resolved as shift
    OPENFLR         shift and go to state 21
    ELSE            reduce using rule 16 (stmts -> .)
    $end            reduce using rule 16 (stmts -> .)
    CLOSEFLR        reduce using rule 16 (stmts -> .)
    PRINT           shift and go to state 8
    PRINTF          shift and go to state 15
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 7
    ID              shift and go to state 17
    PLUS            shift and go to state 12
    MINUS           shift and go to state 9
    IF              shift and go to state 19
    INT             shift and go to state 22

  ! OPENFLR         [ reduce using rule 16 (stmts -> .) ]
  ! PRINT           [ reduce using rule 16 (stmts -> .) ]
  ! PRINTF          [ reduce using rule 16 (stmts -> .) ]
  ! FLOAT           [ reduce using rule 16 (stmts -> .) ]
  ! CHAR            [ reduce using rule 16 (stmts -> .) ]
  ! ID              [ reduce using rule 16 (stmts -> .) ]
  ! PLUS            [ reduce using rule 16 (stmts -> .) ]
  ! MINUS           [ reduce using rule 16 (stmts -> .) ]
  ! IF              [ reduce using rule 16 (stmts -> .) ]
  ! INT             [ reduce using rule 16 (stmts -> .) ]

    newone                         shift and go to state 20
    stmts                          shift and go to state 43
    assignment                     shift and go to state 14
    declareint                     shift and go to state 6
    printing                       shift and go to state 24
    decfloat                       shift and go to state 13
    assignment_int                 shift and go to state 26
    X                              shift and go to state 16
    expr_stmt                      shift and go to state 10
    declare                        shift and go to state 27
    iter_stmt                      shift and go to state 18
    math                           shift and go to state 25

state 21

    (7) stmts -> OPENFLR . stmts CLOSEFLR
    (7) stmts -> . OPENFLR stmts CLOSEFLR
    (8) stmts -> . iter_stmt
    (9) stmts -> . expr_stmt STATETER stmts
    (10) stmts -> . printing STATETER stmts
    (11) stmts -> . assignment STATETER stmts
    (12) stmts -> . decfloat STATETER stmts
    (13) stmts -> . declareint STATETER stmts
    (14) stmts -> . math stmts
    (15) stmts -> . newone stmts
    (16) stmts -> .
    (2) iter_stmt -> . X Y Z
    (21) expr_stmt -> . assignment_int
    (22) expr_stmt -> . declare
    (53) printing -> . PRINT
    (54) printing -> . PRINTF OPBRAC STRLIT follow CLOSEBRAC
    (28) assignment -> . FLOAT ID ASSIGN NUMBER followfloat
    (29) assignment -> . FLOAT ID followfloat
    (33) assignment -> . CHAR ID ASSIGN NUMBER follow
    (36) decfloat -> . ID ASSIGN NUMBER
    (35) declareint -> . ID ASSIGN NUMBER
    (43) math -> . ID PLUS ASSIGN NUMBER STATETER
    (44) math -> . ID PLUS ASSIGN ID STATETER
    (45) math -> . ID MINUS ASSIGN NUMBER STATETER
    (46) math -> . ID MINUS ASSIGN ID STATETER
    (47) math -> . ID AOP ASSIGN NUMBER STATETER
    (48) math -> . ID AOP ASSIGN ID STATETER
    (49) math -> . PLUS PLUS ID STATETER
    (50) math -> . ID PLUS PLUS STATETER
    (51) math -> . MINUS MINUS ID STATETER
    (52) math -> . ID MINUS MINUS STATETER
    (17) newone -> . ID ASSIGN ID PLUS NUMBER STATETER stmts
    (18) newone -> . ID ASSIGN ID PLUS ID STATETER stmts
    (19) newone -> . ID ASSIGN ID MINUS NUMBER STATETER stmts
    (20) newone -> . ID ASSIGN ID MINUS ID STATETER stmts
    (3) X -> . IF OPBRAC cond_stmt CLOSEBRAC
    (23) assignment_int -> . INT ID ASSIGN NUMBER followint
    (24) assignment_int -> . INT ID followint
    (34) declare -> . ID ASSIGN NUMBER followint

    OPENFLR         shift and go to state 21
    CLOSEFLR        reduce using rule 16 (stmts -> .)
    PRINT           shift and go to state 8
    PRINTF          shift and go to state 15
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 7
    ID              shift and go to state 17
    PLUS            shift and go to state 12
    MINUS           shift and go to state 9
    IF              shift and go to state 19
    INT             shift and go to state 22

    newone                         shift and go to state 20
    stmts                          shift and go to state 44
    assignment                     shift and go to state 14
    declareint                     shift and go to state 6
    printing                       shift and go to state 24
    iter_stmt                      shift and go to state 18
    assignment_int                 shift and go to state 26
    X                              shift and go to state 16
    expr_stmt                      shift and go to state 10
    declare                        shift and go to state 27
    decfloat                       shift and go to state 13
    math                           shift and go to state 25

state 22
